syntax = "proto3";
package babylonlabs.babylon.v1beta1;

import "gogoproto/gogo.proto";
import "cosmos_proto/cosmos.proto";

option go_package = "github.com/babylonlabs-io/babylon-sdk/x/babylon/types";
option (gogoproto.goproto_getters_all) = false;
option (gogoproto.equal_all) = false;

// Params defines the parameters for the x/babylon module.
message Params {
  option (gogoproto.equal) = true;

  // max_gas_begin_blocker defines the maximum gas that can be spent in a
  // contract sudo callback
  uint32 max_gas_begin_blocker = 1;
}

// BSNContracts holds all four contract addresses for the Babylon module.
message BSNContracts {
  string babylon_contract = 1
      [ (cosmos_proto.scalar) = "cosmos.AddressString" ];
  string btc_light_client_contract = 2
      [ (cosmos_proto.scalar) = "cosmos.AddressString" ];
  string btc_staking_contract = 3
      [ (cosmos_proto.scalar) = "cosmos.AddressString" ];
  string btc_finality_contract = 4
      [ (cosmos_proto.scalar) = "cosmos.AddressString" ];
}